# sgram-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: sgram-tui.rb
scripts/: install.sh
src/: app.rs  colors.rs  config.rs  dsp.rs  export.rs  input.rs  main.rs  ui.rs
