[package]
name = "sgram-tui"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/arian-shamaei/sgram-tui"
homepage = "https://github.com/arian-shamaei/sgram-tui"
description = "Fast terminal spectrogram viewer with mic/WAV input, style-aware export, and tunable DSP."
readme = "README.md"
keywords = ["audio", "spectrogram", "tui", "fft", "terminal"]
categories = ["command-line-utilities", "multimedia::audio", "visualization"]
documentation = "https://github.com/arian-shamaei/sgram-tui"

[features]
default = ["mic"]
mic = ["cpal"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.27"
ratatui = "0.26"
rustfft = "6.2"
hound = "3.5"
image = { version = "0.24", default-features = false, features = ["png"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5.0"

[dependencies.cpal]
version = "0.15"
optional = true
